PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 8.5.0alpha1

- CLI:
  . Add --ini=diff to print INI settings changed from the builtin default.
    (timwolla)
  . Drop support for -z CLI/CGI flag. (nielsdos)
  . Fixed GH-17956 - development server 404 page does not adapt to mobiles.
    (pascalchevrel)

- COM:
  . Fixed property access of PHP objects wrapped in variant. (cmb)
  . Fixed method calls for PHP objects wrapped in variant. (cmb)

- Core:
  . Fixed bug GH-16665 (\array and \callable should not be usable in
    class_alias). (nielsdos)
  . Added PHP_BUILD_DATE constant. (cmb)
  . Added support for Closures and first class callables in constant
    expressions. (timwolla, Volker Dusch)
  . Use `clock_gettime_nsec_np()` for high resolution timer on macOS
    if available. (timwolla)
  . Implement GH-15680 (Enhance zend_dump_op_array to properly represent
    non-printable characters in string literals). (nielsdos, WangYihang)
  . Add support for backtraces for fatal errors. (enorris)
  . Fixed bug GH-17442 (Engine UAF with reference assign and dtor). (nielsdos)
  . Improved error message of UnhandledMatchError for
    zend.exception_string_param_max_len=0. (timwolla)
  . Fixed bug GH-17959 (Relax missing trait fatal error to error exception).
    (ilutov)

- Curl:
  . Added curl_multi_get_handles(). (timwolla)
  . Added curl_share_init_persistent(). (enorris)
  . Added CURLINFO_USED_PROXY, CURLINFO_HTTPAUTH_USED, and CURLINFO_PROXYAUTH_USED
    support to curl_getinfo. (Ayesh Karunaratne)

- Date:
  . Fix undefined behaviour problems regarding integer overflow in extreme edge
    cases. (nielsdos, cmb, ilutov)

- DOM:
  . Added Dom\Element::$outerHTML. (nielsdos)
  . Added Dom\Element::insertAdjacentHTML(). (nielsdos)

- Enchant:
  . Added enchant_dict_remove_from_session(). (nielsdos)
  . Added enchant_dict_remove(). (nielsdos)
